fix content spacing

--- a/src/css/blocks/_content.scss
+++ b/src/css/blocks/_content.scss
@@ -10,8 +10,5 @@
 .content {
 	// required: works like overflow for this .pantheon grid item
 	min-width: 0;
-
-	@include media("above:medium") {
-		margin-block-start: var(--size-large);
-	}
+	margin-block-start: var(--size-large);
 }
